--- a/FJC-Portfolio-FrontEnd/angular.json
+++ b/FJC-Portfolio-FrontEnd/angular.json
@@ -25,9 +25,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.css"
+              
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/bootstrap/dist/js/bootstrap.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -94,5 +98,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d6d730f9-b03f-40ec-a84a-2bcdde1e52d1"
   }
 }
